<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/up_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        >

        <!-- Логотип -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20sp"
            android:clickable="true"
            android:onClick="logoClick"
            android:src="@drawable/logo" />

        <!-- Изображение для меню -->
        <ImageView
            android:id="@+id/menuPUP"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <!--  Кнопка входа -->
        <Button
            android:layout_marginRight="20sp"
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textSize="12dp"
            android:text="@string/enter"
            android:drawableStart="@drawable/ic_baseline_login_16"
            android:drawablePadding="-20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/rounded_button"

            />

    </RelativeLayout>
    <!-- ScrollView для остального контента -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/up_menu"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <!-- Текстовая надпись и кнопки -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/questions"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25dp"

                >
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:background="@color/white"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/qestions_profile"
                    android:textColor="@color/grayText"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginBottom="15dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qestions_about_reklama"
                    android:textColor="@color/grayText"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginBottom="15dp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qestions_about_all"
                    android:textColor="@color/grayText"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginBottom="15dp"

                    />

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/button_whatsapp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/whatsapp_btn"
                        android:drawableRight="@drawable/ic_whatsapp"
                        android:drawablePadding="8dp"
                        android:padding="16dp"
                        android:text="@string/questions_whatsapp"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_to_mail"
                    android:textColor="@color/grayText"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginBottom="15dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail"
                    android:textColor="@color/grayText"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginBottom="15dp"

                    />

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/button_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Нужна помощь?"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/castom_help_btn"
        android:textColor="@color/green"
        android:textAllCaps="false"
        android:padding="2dp"
        />

</RelativeLayout>